sam-internal/k8s-out/prd/prd-samtest/sherpa-injector-register-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    manifestctl.sam.data.sfdc.net/swagger: disable
  labels:
    app: sherpa-injector
  name: sherpa-injector-cfg
webhooks:
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUUrakNDQStLZ0F3SUJBZ0lVRVFXTmxZYkJQMFRjQVFuak8wMG84V1NIYmpvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2dhb3hDekFKQmdOVkJBWVRBbFZUTVJNd0VRWURWUVFJREFwRFlXeHBabTl5Ym1saE1SWXdGQVlEVlFRSApEQTFUWVc0Z1JuSmhibU5wYzJOdk1SMHdHd1lEVlFRS0RCUnpZV3hsYzJadmNtTmxMbU52YlN3Z2FXNWpMakVWCk1CTUdBMVVFQ3d3TU1UcHdjbVE3TkRwd2NtOWtNVGd3TmdZRFZRUUREQzlUUmtSRElFbHVabkpoSUVsdWRHVnkKYldWa2FXRjBaU0JEUVNCTVpYWmxiQ0F5SUMwZ01UVXlORFV6T0RFeU56QWVGdzB4T0RFd01UVXhOREF6TURCYQpGdzB4T0RFd01qSX [...]
    url: https://sherpa-injector-svc.service-mesh.svc.prd-samtest.prd.sam.sfdc.net:15010/mutate
  failurePolicy: Ignore
  name: sherpa-injector.service-mesh.svc
  namespaceSelector:
    matchExpressions:
    - key: sherpa-injector.service-mesh/inject
      operator: NotIn
      values:
      - disabled
  rules:
  - apiGroups:
    - apps
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
